# SparseFlow

./: .gitattributes  .gitignore  ANNOUNCEMENT.md  BENCHMARKS.md  CANONICAL_RESULTS.md  CI_TRIGGER_v0_2.txt  CMakeLists.txt  FINAL_v0.2_STATUS.txt  GITHUB_RELEASE_v0.2.0.md  GPU_V03_ALPHA_SUCCESS.md  INVESTOR_DECK_OUTLINE.md  INVESTOR_SUMMARY.md  LICENSE  Makefile  PHASE_2_COMPLETE.md  PTX_DEBUG_STATUS.md  QUICK_DEMO.md  QUICK_START.md  README.md  README.md.backup  RELEASE_NOTES_v0.2.0.md  RELEASE_v0.7.md  RELEASE_v1.1.md  ROADMAP.md  ROADMAP_90_DAYS.md  SPA_STATUS.md  WEEK2_FINAL_REPORT.md  WHITEPAPER_OUTLINE.md  benchmark_results_20251211_091719.txt  benchmark_results_20251211_091826.txt  build.sh  build_all.sh  build_and_test_sparseflow.sh  build_passes.sh  build_runtime.sh  build_simple.sh  ci_trigger_v0_2.sh  cleanup_aggressive.sh  consolidate_structure.sh  debug_dispatch.py  (+53 more)
.github/: v0.2_MILESTONE.md
benchmarks/: autotune_thresholds.csv  bench_dense_vs_sparse.py  benchmark.py  plot_dashboard.py  results_sparseflow.csv  run_benchmarks.py
compiler/: CMakeLists.txt  test_clean.mlir  test_lower.mlir
compiler/include/SparseFlow/: Ops.td  SparseFlowDialect.td  SparseFlowOps.h  SparseFlowOps.td
compiler/passes/: AnnotateNmPass.cpp  AnnotateNmPass.h  CMakeLists.txt  DebugSparseFlowPassPlugin.cpp  ExportMetadataPass.cpp  ExportMetadataPass.h  ExportMetadataPass_fixed.cpp  FlopCounterPass.cpp  FlopCounterPass.h  GPULoweringPass.cpp  GenerateSparseMaskPass.cpp  GenerateSparseMaskPass.h  LowerToSparseflowCall.cpp  MatmulProbePass.cpp  NmConsumerPass.cpp  NmConsumerPass.h  PassRegistration.cpp  SPAExportPass.cpp  SimpleGPULoweringPass.cpp  SimpleGPULoweringPass.h  SparseComputationPass.cpp  SparseComputationPass.h  SparseFlowDialect.cpp  SparseFlowDialect.h  SparseFlowGpuRewritePass.cpp  SparseFlowPassPlugin.cpp  SparseFlowPassPlugin_backup.cpp  SparseFlowPasses.cpp  SparseMatmulRewritePass.cpp  TestPass.cpp  VerifySparsePatternPass.cpp  VerifySparsePatternPass.h  test_multiple.mlir
compiler/passes/compiler/passes/: SparseFlowPassPlugin.cpp
compiler/passes/spa/: SPADomain.cpp  SPADomain.cpp.v5  SPADomain.h  SparsityPropagationPass.cpp  SparsityPropagationPass.cpp.backup  SparsityPropagationPass.cpp.v5
compiler/passes/sparseflow/: DOCUMENTATION.md  SPADomain.cpp.backup  SPADomain.h  SparsityPropagationPass.cpp  SparsityPropagationPass.cpp.v5.backup  fix.txt
compiler/passes/test/: test_spa_tensor.mlir
compiler/scripts/: run_flop_counter_demo.sh
compiler/test/: 32x32-matmul.mlir  bench_256x256.mlir  bench_64x64.mlir  gpu-lowering-test.mlir  multi-matmul-test.mlir  simple-test.mlir  sparseflow-1024x1024.mlir  sparseflow-128x128.mlir  sparseflow-32x32.mlir  sparseflow-64x64.mlir  sparseflow-large-matmul.mlir  sparseflow-test.mlir  verify-test.mlir
compiler/test/nm-patterns/: run_all_tests.sh  test_1_4_matmul.mlir  test_2_4_matmul.mlir  test_2_8_matmul.mlir  test_4_16_matmul.mlir  test_mixed_patterns.mlir
compiler/tests/: test_bufferization_pipeline.mlir  test_gpu_rewrite_2_4.mlir  test_nm_rewrite_1_4.mlir  test_nm_rewrite_2_4.mlir  test_nm_rewrite_2_8.mlir  test_nm_rewrite_4_16.mlir  test_nm_rewrite_8_32.mlir
compiler/tests/negative/: test_global_load_in_compute.mlir
compiler/transforms/: sparseflow_gpu_transform.mlir
demo/: SparseFlow_Demo.ipynb  demo_harness.py  gate_runtime.py  shape_gate_sm89.py
docs/: ANNOUNCEMENT.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_RESULTS_v0.2.md  COMMERCIAL_ACCESS.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_ANALYSIS.md  GPU_KERNEL_ABI_v0.3.md  GPU_WORK_SESSION_SUMMARY.md  HARDWARE_CONTRACT.md  (+19 more)
experiments/archived/outputs/: CMakeLists.txt
experiments/old_structure/compiler/: CMakeLists.txt  CMakeLists.txt.backup  cleanup_spa_passes.sh  configure_mlir.sh  simple_sparseflow_test.sh  test_matmul.mlir  test_multiple_ops.mlir
experiments/old_structure/compiler/passes/: Passes.h  SparseFlowGpuRewritePass.cpp.corrupted  SparseFlowGpuTiledVerifyPass.cpp  SparseFlowGpuVerifyPass.cpp  SparseFlowPassPlugin.cpp  TiledKernelCostModelPass.cpp  TiledKernelVerifierPass.cpp
experiments/old_structure/compiler/passes/sparseflow/: SPADomain.cpp  SPADomain.h.backup
experiments/old_structure/compiler/passes/test/: annotate-nm.mlir  nm-consumer.mlir
experiments/old_structure/compiler/scripts/: ci_verify_v07.sh  run_all_demos.sh  run_spa_json_export_demo.sh  run_spa_plus_flops_demo.sh  run_spa_tensor_demo.sh  verify_v07.sh
experiments/old_structure/compiler/test/: 16x8-matmul.mlir  bench_128x128.mlir  bench_32x32.mlir  bench_512x512.mlir  comprehensive-test.mlir  individual-passes-test.mlir
experiments/old_structure/compiler/tests/: README.md  test_gpu_full_pipeline.mlir  test_nm_rewrite_1_4.mlir  test_nm_rewrite_2_4.mlir  test_nm_rewrite_8_32.mlir
experiments/old_structure/compiler/tests/negative/: test_missing_barrier.mlir  test_missing_shared_memory.mlir
experiments/old_structure/compiler/tools/: sparseflow-runner.cpp
experiments/old_structure/compiler/tools/sparseflow-opt/: CMakeLists.txt  sparseflow-opt.cpp
mlir/: CMakeLists.txt
mlir/include/SparseFlow/: Passes.h  SparseFlowDialect.td  SparseFlowOps.td
mlir/lib/Passes/: PassRegistration.cpp
runtime/: BENCHMARK_RESULTS_v0.2_FINAL_20251211_114000.txt  CMakeLists.txt  benchmark_sparse.cpp  masked_matmul.cpp  ultimate_benchmark_20251211_112729.csv  ultimate_benchmark_20251211_112813.csv
runtime/api/: sparseflow_api.cpp  sparseflow_api.h
runtime/benchmark/: micro_bench.cpp
runtime/cache/: compressed_cache.cpp  compressed_cache.h  kernel_cache.cpp  kernel_cache.h  kernel_key.h
runtime/dispatch/: eligibility_policy.cpp  kernel_dispatcher.cpp
runtime/include/: sparseflow_runtime.h
runtime/kernels/: cusparselt_nm24.cu  dense_cublas.cu  kernels.h
runtime/runtime_state/: cusparselt_context.cpp  cusparselt_context.h
runtime/src/: main.cpp  main_backup.cpp  main_fixed.cpp  main_fixed_part1.cpp  sparseflow_runtime.cpp  sparseflow_runtime_enhanced.cp  sparseflow_runtime_fixed.cpp
runtime/tests/: quick_benchmark_honest.cpp  retest_8_32.cpp  test_nm_runtime.cpp
(+358 files in other folders)
