[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparseflow"
version = "2.0.0"
description = "High-performance 2:4 sparse inference for NVIDIA GPUs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["torch"]
authors = [{ name = "Maple Silicon" }]

[tool.setuptools]
packages = { find = {} }
